<resources>
    <string name="app_name">Kaagaz</string>
    <string name="set">set</string>
    <string name="in_order_to_get_functionality_of_dynamic_wallpaper_which_changes_throught_the_day_kaagaz_requires_to_keep_a_background_service_running_ndue_to_limitations_of_android_system_you_ll_need_to_disable_battery_optimisations">In order to get the functionality of Dynamic Wallpapers which changes throughout the day, Kaagaz Requires to Keep a Service Running.\n\nDue to Limitations of Android System you\'ll need to Allow Kaagaz through Battery Saver\n\nOtherwise the Wallpapers won\'t change with time and will be static. The Battery Consumption is negligible.</string>
    <string name="hello_welcome_to_kaagaz">Hello, Welcome to Kaagaz</string>
    <string name="ignore_battery_optimisations">Step 1</string>
    <string name="battery"><![CDATA[Navigate To Battery>Battery optimisation>Tap NOT OPTIMISED>All apps>Kaagaz>Don\'t Optimise or ANY OTHER BATTERY EXCLUSIONS AVAILABLE]]></string>
    <string name="after_doing_the_above_step_restart_the_app_and_voila_your_dynamic_desktop_will_be_delievered_to_you_in_moments">After Doing The Above Step, Restart the App and Voila! Your Dynamic Desktop will be then delivered to you in a while!</string>
    <string name="err_msg">Error Initializing Startup Service, Turn off Battery Optimisations to Start</string>
    <string name="xiaomi">Based on Your Xiaomi Device, You\'ll need to disable Battery Saver to \'No Restrictions.\' Follow the steps!</string>
    <string name="oppo">Based on Your Oppo Device, You\'ll need to disable Battery Related Exclusions. Follow the steps!If not available restart the app!</string>
    <string name="vivo">Based on Your Vivo Device, You\'ll need to disable Battery Related Exclusions. Follow the steps! Open iManager and exclude Kaagaz from Battery Section</string>
    <string name="letv">Based on Your Letv Device, You\'ll need to disable Battery Related Exclusions. Follow the steps! to exclude Kaagaz from Battery Section</string>
    <string name="turn_off_battery_restrictions">Step 2</string>
    <string name="check">GO!</string>

    <string name="err_not_opt">Not Yet, Try Completing Steps Again!</string>
    <string name="choose_your_desktop_view">Choose Your Desktop View</string>
    <string name="restarter">Please Wait!</string>
    <string name="sucsful">Great</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="apply">Apply</string>
    <string name="choose_a_view">Choose a Wallpaper</string>
    <string name="moon_background">moon_background</string>
    <string name="suggestion">Full Moon stretches more than two screens, ensure atleast two home screen pages for best results!</string>
    <string name="mojave_desert_image">Mojave Desert Image</string>
    <string name="celestial_onetime">The Celestial Wallpaper Changes based on the Current Moon Phase</string>
    <string name="intro_msg">Welcome to Kaagaz! </string>
    <string name="stop_wallpaper_service">Stop Wallpaper Service</string>
    <string name="suggestion2">High Quality Wallpaper, Takes some time to be applied for the first time!</string>
    <string name="half_moon">Half Moon Nearby 🌓</string>
    <string name="todo">TODO</string>
    <string name="start">START</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="slide_1_title">Welcome to Kaagaz</string>
    <string name="slide_1_desc">Let\'s Begin!</string>
    <string name="slide_2_title">Dynamic Desktop</string>
    <string name="slide_2_desc">Get the Breeze of a Sea or the Scotch of a Desert, your wallpaper keeps changing by the time of the day!</string>
    <string name="slide_3_title">No Battery Straining</string>
    <string name="slide_3_desc">All of this comes with almost negligible affect to your battery juice</string>
    <string name="slide_4_title">Just Before We Leap...</string>
    <string name="slide_4_desc">To allow smooth functioning of Kaagaz, the app needs to run in the background.\nGot it?\nGreat!\nLet\'s tell the system!</string>
    <string name="snooze">Stop</string>
    <string name="developer_name">Developed by: <u>Spandan Saxena</u></string>
    <string name="final_confirmation">Do You Want To Quit Kaagaz Service?\nDynamic Desktop will be Stopped</string>
    <string name="yes">Yes</string>
    <string name="nope">Nope</string>
    <string name="image_of_app">Image of App</string>
    <string name="kaagaz_wallpapers">Kaagaz Wallpapers</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="kaagaz_needs_storage_permissions_to_download_dynamic_wallpapers">Kaagaz needs Storage Permissions to Download Dynamic Wallpapers</string>
    <string name="go_ahead_to_grant_permissions">Go Ahead to Grant Permissions</string>
</resources>
